--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="current_coints">Current Coints</string>
     <string name="exchange_them_for_luxury_gifts">Exchange them for luxury gifts</string>
     <string name="locked">Locked</string>
+    <string name="select">Select</string>
 </resources>
