sửa lỗi tại QuizActivity và update LuckyActivity, SpinWheelActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="purchase">Purchase</string>
     <string name="unlocked">Unlocked</string>
     <string name="open">Open</string>
+    <string name="lucky_box">Home</string>
+    <string name="spin_wheel">Home</string>
 </resources>
